# gramps-mcp

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: auto-assign-issues.yml  auto-release.yml  ci.yml  release.yml
scripts/: check_copyright_header.py  check_file_length.py  check_no_emojis.py  ensure_docker.sh  seed_test_db.py  version_check.py
src/: __init__.py
src/gramps_mcp/: __init__.py  _merge.py  auth.py  client.py  config.py  media_client.py  operations.py  server.py  server_tools.py  startup.py  utils.py
src/gramps_mcp/handlers/: __init__.py  citation_handler.py  date_handler.py  event_handler.py  family_detail_handler.py  family_handler.py  media_handler.py  name_utils.py  note_handler.py  person_detail_handler.py  person_handler.py  place_handler.py  repository_handler.py  source_handler.py  timeline_events.py
src/gramps_mcp/tools/: __init__.py  (+13 more)
tests/: conftest.py  test_analysis.py  test_analysis_unit.py  test_api_mapping_unit.py  test_api_version.py  test_auth_integration.py  test_auth_unit.py  test_base_data_model_payload.py  test_citation_validation.py  test_client.py  test_client_merge.py  test_client_unit.py  test_complete_workflow.py  test_data_management.py  test_data_management_unit.py  test_download_media_unit.py  test_errors.py  test_family_child_integration.py  test_family_child_ref_list.py  test_family_detail_concurrency_integration.py  test_gql_private_reject.py  test_handler_analysis.py  test_handler_citation.py  test_handler_date.py  test_handler_event.py  test_handler_family.py  test_handler_media.py  test_handler_note.py  test_handler_person.py  test_handler_place.py  test_handler_repository.py  test_handler_source.py  test_handlers.py  test_join_surnames.py  test_media_client_unit.py  test_media_file_replacement.py  test_meta_execute_unit.py  test_meta_tools.py  test_operations.py  test_parameter_alignment.py  (+13 more)
tests/fixtures/: seed.gramps
(+27 files in other folders)
